    unix-script=<bin directory> unix-man=<man directory>

  The last two parameters are optional.

- EOL_SPAN_REGEXP rule was broken (Oliver Rutherfurd).

- Undoing all changes up to a save would not delete the autosave file,
  even though the buffer was no longer marked as "dirty".

- Fixed minor problem with expanding files when moving the caret outside
  the narrowed range.

* Version 4.1pre9

Thanks to Chris Petersen, Iain Hewson, Kris Kopicki, Randolf Mock and
Reinout van Schouwen for contributing to this release.

+ Syntax Highlighting Changes:

- Added gettext mode (primarily used on Unix for translating programs
  to other languages) (Reinout van Schouwen).

- Added APDL mode (Randolf Mock).

- Updated CSS, PHP, Perl syntax highlighting (Chris Petersen).

+ Miscellaneous Changes:

- Global options dialog box remembers its size and position now.

- Much faster auto indent.

- Prefix keys (C+e, C+e n, C+m, C+r) now show a status bar message.

- Added a "Docking Options" item to the docking button's right-click
  menu.

+ Installer Changes:

- On Unix systems, a jedit.1 manual page is now installed.

+ Bug Fixes:

- Saving a file from one file system to another using the "Save a Copy
  As" command could cause problems if the destination VFS implemented
  the _saveComplete() method. This method was only passed a buffer
  instance, and there was no way to obtain the destination path.

- Making changes above the first line did not scroll the text area.

- Fixed a bug with nested compound edits. I'm not sure if it ever caused
  any problems, however it did affect performance.

- More fixes for non-standard mouse button handling under MacOS X
  (Kris Kopicki).

- Fixed possible incorrect enabling and disabling of controls, and an
  ArrayIndexOutOfBoundsException when selecting the last edit mode in
  the Editing option pane's list.

- Fixed possible ArrayIndexOutOfBoundsException while scrolling in a
  text area that was narrowed to a specific region in the buffer.